# eflips-tco

./: README.md  example_using_power_and_occupancy.py  main.py  pyproject.toml  requirements.txt  write_parameters.py
eflips/tco/: __init__.py  analysis.py  cost_items.py  data_queries.py  init_database.py  input_tco.csv  main.py  parameters.py  tco_calculator.py  tco_utils.py  util.py
eflips/tco/analysis/: analysis.py
result_data/output_files/: o_result_scenario_1.json  o_result_scenario_3.json  o_result_scenario_4.json  o_result_scenario_5.json  o_results_scn_1.json  o_results_scn_3.json  o_results_scn_4.json  o_results_scn_5.json  p_result_scenario_1.json  p_result_scenario_3.json  p_result_scenario_4.json  p_result_scenario_5.json  p_results_scn_1.json  p_results_scn_3.json  p_results_scn_4.json  p_results_scn_5.json
src/: analysis.py  functions.py  get_data.py  init_database.py  input_tco.csv  input_tco.json  main.py  parameters.py  result_scenario_1.json  result_scenario_3.json  result_scenario_4.json  results.json
tests/: test_util.py
