[project]
name = "eflips-tco"

version = "0.1.0"
description = ""
authors = [
    {name = "Julian Dubiel", email = "julian.dubiel@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [

    "eflips-eval (>=1.7.2,<2.0.0)",
    "matplotlib (==3.9.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "eflips-model (>=9.0.0,<11.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
